Modifed navbar so that it is fixed on top and is scrollable when collapsed

--- a/src/components/layout/styles/header.css
+++ b/src/components/layout/styles/header.css
@@ -297,3 +297,8 @@
 .collapse-item:hover {
   background-color: #D4D4D4 !important;
 }
+
+#navbarContent {
+  max-height: 375px;
+  overflow-y: auto;
+}
