--- a/src/layouts/styles/Layout.css
+++ b/src/layouts/styles/Layout.css
@@ -29,3 +29,7 @@ html, body {
     padding: 0;
     width: 100%;
 }
+
+#mainContainer {
+  padding: 65px;
+}
